Update g-dev for test deploy

--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Export TSOSI data file\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -100,7 +107,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res"
+    "# Optional date cleaning to output dates instead of datetimes\n",
+    "date_cols = [\n",
+    "    \"Support Confirmation Date\",\n",
+    "    \"Support Start Date\",\n",
+    "    \"Support End Date\",\n",
+    "]\n",
+    "for d_col in date_cols:\n",
+    "    res[d_col] = res[d_col].dt.date"
    ]
   },
   {
@@ -287,50 +301,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import sys\n",
-    "import os\n",
-    "import django\n",
-    "from asgiref.sync import sync_to_async\n",
-    "\n",
-    "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent)\n",
-    "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
-    "\n",
-    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
-    "\n",
-    "django.setup()\n",
-    "\n",
-    "from tsosi.data.ingestion import ingest_data_file\n",
-    "from tsosi.models import empty_db\n",
-    "\n",
-    "publisher_files = [\n",
-    "    \"2025-02-04_doaj_publisher_2021_full.json\",\n",
-    "    \"2025-02-04_doaj_publisher_2022_full.json\",\n",
-    "    \"2025-02-04_doaj_publisher_2023_full.json\",\n",
-    "    \"2025-02-04_doaj_publisher_2024_full.json\",\n",
-    "]\n",
-    "\n",
-    "\n",
-    "@sync_to_async\n",
-    "def to_run():\n",
-    "    empty_db()\n",
-    "    # for file in publisher_files:\n",
-    "    #     ingest(file)\n",
-    "    # return\n",
-    "\n",
-    "\n",
-    "res = await to_run()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -347,9 +317,8 @@
     "import re\n",
     "import numpy as np\n",
     "\n",
-    "folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/3_enriched\"\n",
-    "file_name = \"2025-01-15-DOAJ_Library_Report_2024_enriched_done.xlsx\"\n",
-    "file_name = \"2024-09-20-DOAJ_Library_Report_2023_enriched_done.xlsx\"\n",
+    "folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doab/1_raw\"\n",
+    "file_name = \"2023-11-27-DOAB_Library_Report_2023.xlsx\"\n",
     "sheet_name = \"Sheet1\"\n",
     "\n",
     "xls = pd.ExcelFile(f\"{folder}/{file_name}\")\n",
@@ -377,9 +346,10 @@
     "    return re.sub(r\"\\s+\", \" \", s).strip()\n",
     "\n",
     "\n",
-    "agent_column = \"agent/consortium\"\n",
-    "country_column = \"country\"\n",
-    "not_agents = [\"standalone library\", \"Funder\", \"Consortium\", \"publisher\"]\n",
+    "agent_column = \"Agent/Contact\"\n",
+    "country_column = \"Country\"\n",
+    "# not_agents = [\"standalone library\", \"Funder\", \"Consortium\", \"publisher\"]\n",
+    "not_agents = []\n",
     "df = df[~df[agent_column].isna()]\n",
     "df = df[~df[agent_column].isin(not_agents)]\n",
     "df = df[[agent_column, country_column]].drop_duplicates()\n",
