Correct some stuff in data processing

--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -352,11 +352,11 @@
     "not_agents = []\n",
     "df = df[~df[agent_column].isna()]\n",
     "df = df[~df[agent_column].isin(not_agents)]\n",
-    "df = df[[agent_column, country_column]].drop_duplicates()\n",
     "for c in df.columns:\n",
     "    df[c] = df[c].apply(clean_cell_value)\n",
+    "df = df[[agent_column, country_column]].drop_duplicates()\n",
     "df.replace(to_replace=[np.nan, pd.NA, pd.NaT], value=None, inplace=True)\n",
-    "df"
+    "df.sort_values(by=agent_column)"
    ]
   }
  ],
