--- a/backend/tsosi/data/run.ipynb
+++ b/backend/tsosi/data/run.ipynb
@@ -187,9 +187,7 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.data.enrichment import (\n",
-    "    fetch_empty_identifier_records,\n",
-    ")\n",
+    "from tsosi.data.enrichment import entities_with_identifier_data\n",
     "\n",
     "now = timezone.now()\n",
     "\n",
@@ -197,8 +195,8 @@
     "@sync_to_async\n",
     "def to_run():\n",
     "    # IdentifierVersion.objects.all().delete()\n",
-    "    identifier_versions = fetch_empty_identifier_records(now)\n",
-    "    return identifier_versions\n",
+    "    entities = entities_with_identifier_data(now)\n",
+    "    return entities\n",
     "\n",
     "\n",
     "res = await to_run()"
