Add empty_db management command + fix minor bug

--- a/backend/tsosi/data/run.ipynb
+++ b/backend/tsosi/data/run.ipynb
@@ -174,6 +174,7 @@
     "import sys\n",
     "import os\n",
     "import django\n",
+    "import pandas as pd\n",
     "from asgiref.sync import sync_to_async\n",
     "from django.utils import timezone\n",
     "\n",
@@ -188,15 +189,18 @@
     "django.setup()\n",
     "\n",
     "from tsosi.data.enrichment import entities_with_identifier_data\n",
+    "from tsosi.models import Entity\n",
     "\n",
     "now = timezone.now()\n",
     "\n",
     "\n",
     "@sync_to_async\n",
     "def to_run():\n",
-    "    # IdentifierVersion.objects.all().delete()\n",
-    "    entities = entities_with_identifier_data(now)\n",
-    "    return entities\n",
+    "    # entities = entities_with_identifier_data()\n",
+    "    entities = Entity.objects.filter(logo_url__isnull=False).values(\n",
+    "        \"id\", \"name\", \"logo_url\"\n",
+    "    )\n",
+    "    return pd.DataFrame.from_records(entities)\n",
     "\n",
     "\n",
     "res = await to_run()"
@@ -208,7 +212,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.loc[0, \"record\"]"
+    "mask = res[\"logo_url\"].str.startswith(\"http://commons.wikimedia.org\")\n",
+    "res[~mask]"
    ]
   },
   {
