Use home variable to set up custom file paths

--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -42,11 +42,15 @@
     ")\n",
     "\n",
     "year = 2024\n",
-    "file_path = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj/4_prepared/2025-01-07-DOAJ_Publisher_Report_2024_prepared.xlsx\"\n",
+    "file_path = (\n",
+    "    Path.home()\n",
+    "    / \"Nextcloud/TSOSI_data/doaj/4_prepared/2025-01-07-DOAJ_Publisher_Report_2024_prepared.xlsx\"\n",
+    ")\n",
     "sheet_name = \"Sheet1\"\n",
-    "config = doaj_publisher_config(year, file_path, sheet_name)\n",
+    "config = doaj_publisher_config(year, str(file_path), sheet_name)\n",
+    "config.get_data()\n",
     "# config = doaj_library_2023_config(file_path, sheet_name)\n",
-    "config.generate_data_file()"
+    "# config.generate_data_file()"
    ]
   },
   {
@@ -82,8 +86,8 @@
     "from tsosi.data.pid_matching import prepare_manual_matching\n",
     "\n",
     "\n",
+    "file_folder = Path.home() / \"Nextcloud/TSOSI_data/doab/1_raw/\"\n",
     "file_name = \"2023-11-27-DOAB_Library_Report_2023.xlsx\"\n",
-    "file_folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doab/1_raw/\"\n",
     "sheet = \"Sheet1\"\n",
     "name_column = \"Institution\"\n",
     "country_colum = \"Country\"\n",
@@ -91,7 +95,7 @@
     "\n",
     "@sync_to_async\n",
     "def to_run():\n",
-    "    xls = pd.ExcelFile(f\"{file_folder}{file_name}\")\n",
+    "    xls = pd.ExcelFile(str(file_folder / file_name))\n",
     "    data = pd.read_excel(xls, sheet)\n",
     "    return prepare_manual_matching(\n",
     "        data, name_column, country_column=country_colum\n",
@@ -119,13 +123,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doab/2_matched/\"\n",
+    "file_folder = Path.home() / \"Nextcloud/TSOSI_data/doab/2_matched/\"\n",
     "file_to_write = \"2023-11-27-DOAB_Library_Report_2023_matched.xlsx\"\n",
-    "file_path = f\"{file_folder}{file_to_write}\"\n",
+    "file_path = str(file_folder / file_to_write)\n",
     "res.to_excel(file_path, index=False)"
    ]
   },
@@ -137,6 +141,40 @@
    "source": [
     "d = res.copy()\n",
     "d[d[\"_processed\"] != True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "import os\n",
+    "import django\n",
+    "import pandas as pd\n",
+    "from asgiref.sync import sync_to_async\n",
+    "\n",
+    "# Add the parent directory to the system path and setup django\n",
+    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent)\n",
+    "\n",
+    "if BASE_DIR not in sys.path:\n",
+    "    sys.path.append(BASE_DIR)\n",
+    "\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+    "\n",
+    "django.setup()\n",
+    "\n",
+    "from tsosi.models import empty_db\n",
+    "\n",
+    "\n",
+    "@sync_to_async\n",
+    "def to_run():\n",
+    "    empty_db()\n",
+    "\n",
+    "\n",
+    "res = await to_run()"
    ]
   },
   {
@@ -178,12 +216,14 @@
     ")\n",
     "\n",
     "process_agents = True\n",
-    "folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doaj\"\n",
+    "folder = Path.home() / \"Nextcloud/TSOSI_data/doaj\"\n",
     "file_base_name = \"2024-09-20-DOAJ_Library_Report_2023\"\n",
-    "enriched_file_path = f\"{folder}/3_enriched/{file_base_name}_enriched_done.xlsx\"\n",
+    "enriched_file_path = (\n",
+    "    folder / \"3_enriched\" / f\"{file_base_name}_enriched_done.xlsx\"\n",
+    ")\n",
     "sheet_transferts = \"Transferts\"\n",
     "name_column = \"Institution name\"\n",
-    "xls = pd.ExcelFile(enriched_file_path)\n",
+    "xls = pd.ExcelFile(str(enriched_file_path))\n",
     "\n",
     "data = pd.read_excel(xls, sheet_transferts)\n",
     "\n",
@@ -222,13 +262,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prepared_file_path = f\"{folder}/4_prepared/{file_base_name}_prepared.xlsx\"\n",
+    "prepared_file_path = folder / \"4_prepared\" / f\"{file_base_name}_prepared.xlsx\"\n",
     "\n",
-    "res.to_excel(prepared_file_path, sheet_name=\"Transferts\", index=False)"
+    "res.to_excel(str(prepared_file_path), sheet_name=\"Transferts\", index=False)"
    ]
   },
   {
@@ -316,12 +356,13 @@
     "import pandas as pd\n",
     "import re\n",
     "import numpy as np\n",
+    "from pathlib import Path\n",
     "\n",
-    "folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doab/1_raw\"\n",
+    "folder = Path.home() / \"Nextcloud/TSOSI_data/doab/1_raw\"\n",
     "file_name = \"2023-11-27-DOAB_Library_Report_2023.xlsx\"\n",
     "sheet_name = \"Sheet1\"\n",
     "\n",
-    "xls = pd.ExcelFile(f\"{folder}/{file_name}\")\n",
+    "xls = pd.ExcelFile(str(folder / file_name))\n",
     "df = pd.read_excel(xls, sheet_name)\n",
     "\n",
     "\n",
