Add prepared data file for minimal reproduction

--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -33,6 +33,7 @@
     ")\n",
     "from tsosi.data.preparation.doaj.libraries_2024_now import (\n",
     "    get_config as doaj_library_2024_config,\n",
+    "    get_fixture_config as doaj_library_fixture_2024_config,\n",
     ")\n",
     "from tsosi.data.preparation.doaj.libraries_2023 import (\n",
     "    get_config as doaj_library_2023_config,\n",
@@ -46,11 +47,12 @@
     "    Path.home()\n",
     "    / \"Nextcloud/TSOSI_data/doaj/4_prepared/2025-01-07-DOAJ_Publisher_Report_2024_prepared.xlsx\"\n",
     ")\n",
+    "file_path = f\"{BASE_DIR}/tsosi/data/fixtures/doaj_example.json\"\n",
     "sheet_name = \"Sheet1\"\n",
-    "config = doaj_publisher_config(year, str(file_path), sheet_name)\n",
+    "config = doaj_library_fixture_2024_config(year, str(file_path))\n",
     "config.get_data()\n",
     "# config = doaj_library_2023_config(file_path, sheet_name)\n",
-    "# config.generate_data_file()"
+    "config.generate_data_file()"
    ]
   },
   {
