Create analytics table, endpoint and infrastructure histogram chart

--- a/backend/tsosi/data/run.ipynb
+++ b/backend/tsosi/data/run.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Fill DB with partners data\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -18,6 +11,7 @@
     "import os\n",
     "import django\n",
     "from asgiref.sync import sync_to_async\n",
+    "import pandas as pd\n",
     "\n",
     "# Add the parent directory to the system path and setup django\n",
     "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent)\n",
@@ -29,52 +23,10 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.data.data_preparation import prepare_data, get_input_config\n",
-    "from tsosi.data.ingestion import ingest_new_records\n",
-    "from tsosi.models import empty_db\n",
-    "\n",
-    "EMPTY_DB = True\n",
-    "\n",
     "\n",
     "@sync_to_async\n",
     "def to_run():\n",
-    "    # Fill DB\n",
-    "    if EMPTY_DB:\n",
-    "        empty_db()\n",
-    "\n",
-    "    doaj_publisher_2021 = get_input_config(\n",
-    "        \"doaj_publisher_2021\",\n",
-    "        \"2025-01-07-DOAJ_Publisher_Report_2021_prepared.xlsx\",\n",
-    "        sheet_name=\"Sheet1\",\n",
-    "    )\n",
-    "    doaj_publisher_2022 = get_input_config(\n",
-    "        \"doaj_publisher_2022\",\n",
-    "        \"2025-01-07-DOAJ_Publisher_Report_2022_prepared.xlsx\",\n",
-    "        sheet_name=\"Sheet1\",\n",
-    "    )\n",
-    "    doaj_publisher_2023 = get_input_config(\n",
-    "        \"doaj_publisher_2023\",\n",
-    "        \"2025-01-07-DOAJ_Publisher_Report_2023_prepared.xlsx\",\n",
-    "        sheet_name=\"Sheet1\",\n",
-    "    )\n",
-    "    doaj_publisher_2024 = get_input_config(\n",
-    "        \"doaj_publisher_2024\",\n",
-    "        \"2025-01-07-DOAJ_Publisher_Report_2024_prepared.xlsx\",\n",
-    "        sheet_name=\"Sheet1\",\n",
-    "    )\n",
-    "    configs = [\n",
-    "        doaj_publisher_2021,\n",
-    "        doaj_publisher_2022,\n",
-    "        doaj_publisher_2023,\n",
-    "        doaj_publisher_2024,\n",
-    "    ]\n",
-    "    configs = [doaj_publisher_2021, doaj_publisher_2022]\n",
-    "    configs = [doaj_publisher_2021]\n",
-    "    for config in configs:\n",
-    "        prepare_data(config)\n",
-    "        ingest_new_records(config.processed_data)\n",
-    "\n",
-    "    return config\n",
+    "    return\n",
     "\n",
     "\n",
     "res = await to_run()"
@@ -87,247 +39,6 @@
    "outputs": [],
    "source": [
     "res"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Enrich existing entities with ROR data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import sys\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "import django\n",
-    "from asgiref.sync import sync_to_async\n",
-    "from django.utils import timezone\n",
-    "\n",
-    "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent)\n",
-    "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
-    "\n",
-    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
-    "\n",
-    "django.setup()\n",
-    "\n",
-    "from tsosi.data.pid_matching import (\n",
-    "    entities_with_no_ror,\n",
-    "    match_entities_to_pid,\n",
-    ")\n",
-    "from tsosi.models import Identifier, Entity, Transfert\n",
-    "from tsosi.data.ingestion import ingest_partners_data\n",
-    "\n",
-    "\n",
-    "to_merge = pd.DataFrame(\n",
-    "    {\n",
-    "        \"entity_id\": [\n",
-    "            \"028b2cfd-bea6-49bf-8576-5824d808f290\",\n",
-    "            \"028b2cfd-bea6-49bf-8576-5824d808f290\",\n",
-    "        ],\n",
-    "        \"merged_with_id\": [\n",
-    "            \"03a89952-4bbf-43dc-b8dc-080695a19cda\",\n",
-    "            \"03a89952-4bbf-43dc-b8dc-080695a19cda\",\n",
-    "        ],\n",
-    "        \"merged_criteria\": [\"AHAH\", \"BHBH\"],\n",
-    "        \"match_source\": [\"automatic\", \"automatic\"],\n",
-    "        \"match_criteria\": [\"merged\", \"merged\"],\n",
-    "    }\n",
-    ").reset_index()\n",
-    "\n",
-    "\n",
-    "now = timezone.now()\n",
-    "\n",
-    "\n",
-    "@sync_to_async\n",
-    "def to_run():\n",
-    "    entities = entities_with_no_ror()\n",
-    "    match_entities_to_pid(entities, export_to_verify=False, limit=20)\n",
-    "\n",
-    "\n",
-    "res = await to_run()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Fetch PID records\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import sys\n",
-    "import os\n",
-    "import django\n",
-    "import pandas as pd\n",
-    "from asgiref.sync import sync_to_async\n",
-    "from django.utils import timezone\n",
-    "\n",
-    "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent)\n",
-    "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
-    "\n",
-    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
-    "\n",
-    "django.setup()\n",
-    "\n",
-    "from tsosi.data.enrichment import entities_with_identifier_data\n",
-    "from tsosi.models import Entity\n",
-    "\n",
-    "now = timezone.now()\n",
-    "\n",
-    "\n",
-    "@sync_to_async\n",
-    "def to_run():\n",
-    "    # entities = entities_with_identifier_data()\n",
-    "    entities = Entity.objects.filter(logo_url__isnull=False).values(\n",
-    "        \"id\", \"name\", \"logo_url\"\n",
-    "    )\n",
-    "    return pd.DataFrame.from_records(entities)\n",
-    "\n",
-    "\n",
-    "res = await to_run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask = res[\"logo_url\"].str.startswith(\"http://commons.wikimedia.org\")\n",
-    "res[~mask]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Analyze & ingest PID record data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import sys\n",
-    "import os\n",
-    "import django\n",
-    "from asgiref.sync import sync_to_async\n",
-    "from django.utils import timezone\n",
-    "\n",
-    "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent)\n",
-    "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
-    "\n",
-    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
-    "\n",
-    "django.setup()\n",
-    "\n",
-    "from tsosi.models import Entity, IdentifierVersion\n",
-    "from tsosi.data.enrichment import (\n",
-    "    update_entity_from_pid_records,\n",
-    "    update_wikipedia_extract,\n",
-    "    new_identifiers_from_records,\n",
-    "    update_logos,\n",
-    "    update_transfert_date_clc,\n",
-    "    update_entity_roles_clc,\n",
-    ")\n",
-    "\n",
-    "now = timezone.now()\n",
-    "\n",
-    "IDS = [\"Q1227538\", \"Q945876\"]\n",
-    "\n",
-    "\n",
-    "@sync_to_async\n",
-    "def to_run():\n",
-    "    # IdentifierVersion.objects.all().delete()\n",
-    "    # Entity.objects.all().update(logo=None, date_logo_fetched=None)\n",
-    "    # update_entity_from_pid_records()\n",
-    "    new_identifiers_from_records()\n",
-    "    # update_wikipedia_extract()\n",
-    "    # update_logos()\n",
-    "    # update_transfert_date_clc()\n",
-    "    # update_entity_roles_clc()\n",
-    "\n",
-    "\n",
-    "res = await to_run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res[0].loc[10]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Fetch currency rates and convert amounts\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import sys\n",
-    "import os\n",
-    "import django\n",
-    "from asgiref.sync import sync_to_async\n",
-    "from django.utils import timezone\n",
-    "\n",
-    "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent)\n",
-    "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
-    "\n",
-    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
-    "\n",
-    "django.setup()\n",
-    "\n",
-    "from tsosi.data.currencies.currency_rates import currency_rates_workflow\n",
-    "\n",
-    "now = timezone.now()\n",
-    "\n",
-    "IDS = [\"Q1227538\", \"Q945876\"]\n",
-    "\n",
-    "\n",
-    "@sync_to_async\n",
-    "def to_run():\n",
-    "    currency_rates_workflow()\n",
-    "\n",
-    "\n",
-    "res = await to_run()"
    ]
   },
   {
