Write scripts to organize messy DOAB funding data

--- a/backend/tsosi/data/preparation/doab/libraries_2023.ipynb
+++ b/backend/tsosi/data/preparation/doab/libraries_2023.ipynb
@@ -1,33 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mapping of countries from another sheet\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "import sys\n",
-    "import os\n",
-    "import django\n",
     "import pandas as pd\n",
-    "from asgiref.sync import sync_to_async\n",
-    "\n",
-    "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
-    "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
-    "\n",
-    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
-    "\n",
-    "django.setup()\n",
     "\n",
     "file_name = \"LibrarySupportProjections_OAPEN_DOAB_20231127_SD.xlsx\"\n",
-    "file_input_folder = (\n",
-    "    \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doab/0_to_combine/\"\n",
-    ")\n",
-    "file_output_folder = \"/home/guillaume-alzieu/Dev/TSOSI/TSOSI_data/doab/1_raw/\"\n",
+    "file_input_folder = Path.home() / \"Dev/TSOSI/TSOSI_data/doab/0_to_combine/\"\n",
+    "file_output_folder = Path.home() / \"Dev/TSOSI/TSOSI_data/doab/1_raw/\"\n",
     "\n",
     "\n",
     "def pre_process():\n",
@@ -71,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
