Re-generate transfert file

--- a/backend/tsosi/data/preparation/doab/libraries_2024.ipynb
+++ b/backend/tsosi/data/preparation/doab/libraries_2024.ipynb
@@ -180,9 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following entities have 'One year commitment' with commitment period > 1 year\n",
+      "['American University', 'Hochschule für angewandte Wissenschaft und Kunst, Fachhochschule Hildesheim/Holzminden/Göttingen-Bib', 'Hochschule Osnabrück / Bibliothek', 'Library of the Deutsches Museum']\n",
+      "\n",
+      "ERROR - There are some inconsistent data within the Upfront transferts\n",
+      "Check the following entities:\n",
+      "['SUNY System', 'TU Darmstadt, Universitäts - und Landesbibliothek', 'University of California, Riverside']\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
@@ -381,6 +395,20 @@
     "    )\n",
     "    df[\"_spanned_time\"] = df[\"_date_end\"] - df[\"_date_start\"]\n",
     "\n",
+    "    covered_statuses = [\n",
+    "        \"annual\",\n",
+    "        \"one year commitment\",\n",
+    "        \"annual, one year commitment\",\n",
+    "        \"upfront\",\n",
+    "    ]\n",
+    "    non_covered = df[\n",
+    "        ~df[\"Invoice preference\"].str.strip().str.lower().isin(covered_statuses)\n",
+    "    ]\n",
+    "    if not non_covered.empty:\n",
+    "        raise Exception(\n",
+    "            f\"Unhandled invoice preferences: {non_covered[\"Invoice preference\"].drop_duplicates().to_list()}\"\n",
+    "        )\n",
+    "\n",
     "    # Split data according to the Invoice preference\n",
     "    res = pd.concat(\n",
     "        [\n",
@@ -398,12 +426,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(df[df[\"Invoice preference\"] == \"Upfront\"])\n",
-    "len(res)"
+    "## Map with previous matching\n",
+    "from pathlib import Path\n",
+    "\n",
+    "file = (\n",
+    "    Path.home()\n",
+    "    / \"Nextcloud/TSOSI_data/doab/2_matched\"\n",
+    "    / \"2025-02-11-DOAB_Library_Report_matched.xlsx\"\n",
+    ")\n",
+    "matched = pd.read_excel(file)\n",
+    "matching_columns = [c for c in matched.columns if c.startswith(\"_\")]\n",
+    "data = (\n",
+    "    matched.groupby([\"Company\", \"Country\"], dropna=False)[matching_columns]\n",
+    "    .first()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "organized = res.merge(data, how=\"left\", on=[\"Company\", \"Country\"])\n",
+    "sorted_cols = []\n",
+    "for c in organized.columns:\n",
+    "    if c in matching_columns:\n",
+    "        continue\n",
+    "    sorted_cols.append(c)\n",
+    "    if c == \"Company\":\n",
+    "        sorted_cols += matching_columns\n",
+    "\n",
+    "organized[sorted_cols]\n",
+    "organized[\"_processed\"] = organized[\"_processed\"].apply(\n",
+    "    lambda x: x if pd.isna(x) else True\n",
+    ")\n",
+    "organized[sorted_cols].to_excel(\n",
+    "    Path.home()\n",
+    "    / \"Nextcloud/TSOSI_data/doab/2_matched\"\n",
+    "    / \"2025-02-11-DOAB_Library_Report_matched_grouped.xlsx\",\n",
+    "    index=False,\n",
+    ")"
    ]
   },
   {
