Create custom registry to handle DOAB & OAPEN special case

--- a/backend/tsosi/data/preparation/doab/libraries_2024.ipynb
+++ b/backend/tsosi/data/preparation/doab/libraries_2024.ipynb
@@ -533,9 +533,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO raw_data_config - Preparing data with config `doab_oapen_library`.\n",
+      "INFO raw_data_config - Successfully prepared the data for config doab_oapen_library\n",
+      "INFO raw_data_config - Successfully write TSOSI data file at /home/guillaume-alzieu/Nextcloud/TSOSI_data/_exports/2025-02-26_doab_oapen_library.json\n",
+      "INFO raw_data_config - Preparing data with config `doab_oapen_sponsor`.\n",
+      "INFO raw_data_config - Successfully prepared the data for config doab_oapen_sponsor\n",
+      "INFO raw_data_config - Successfully write TSOSI data file at /home/guillaume-alzieu/Nextcloud/TSOSI_data/_exports/2025-02-26_doab_oapen_sponsor.json\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
