Add missing columns in ingestion pipeline instead of data preparation

--- a/backend/tsosi/data/preparation/doab/data_2024.ipynb
+++ b/backend/tsosi/data/preparation/doab/data_2024.ipynb
@@ -562,7 +562,7 @@
     ")\n",
     "sheet_name = \"Transferts\"\n",
     "config = config_libraries(str(file_path), sheet_name)\n",
-    "config.generate_data_file()\n",
+    "# config.generate_data_file()\n",
     "\n",
     "# Sponsors\n",
     "file_path = (\n",
